<resources>
    <string name="app_name">DailyFlow</string>
    <string name="widget_title">DailyFlow Today</string>
    <string name="stay_hydrated">Stay Hydrated 💧</string>
    <string name="set_reminders_and_track_your_daily_water_goals">Set reminders and track your daily water goals.</string>
    <string name="sleep_on_time">Sleep On Time 🛏️</string>
    <string name="build_a_consistent_bedtime_routine_and_mark_your_progress">Build a consistent bedtime routine and mark your progress.</string>
    <string name="move_your_body">Move Your Body 🏋️</string>
    <string name="track_workouts_or_quick_sessions_and_keep_the_streak_going">Track workouts or quick sessions and keep the streak going.</string>
    <string name="study_session">Study Session 📖</string>
    <string name="focus_on_learning_daily_log_your_sessions_and_keep_momentum">Focus on learning daily—log your sessions and keep momentum.</string>
    <string name="get_started">Get Started</string>
    <string name="meditate">Meditate 🕯️</string>
    <string name="take_a_quiet_pause_set_a_timer_breathe_and_build_your_mindfulness_streak">Take a quiet pause—set a timer, breathe, and build your mindfulness streak.</string>
    <string name="write_in_journal">Write in Journal ✍️</string>
    <string name="capture_your_day_in_a_few_lines_log_your_mood_and_a_highlight_to_reflect_and_grow">Capture your day in a few lines—log your mood and a highlight to reflect and grow.</string>
    <string name="app_logo">App Logo</string>
    <string name="welcome">Welcome</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_password">Enter Password</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="settings">Settings</string>
    <string name="about_dailyflow_v1_0">About: DailyFlow v1.0</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="app_notifications">APP NOTIFICATIONS</string>
    <string name="manage_alarms">MANAGE ALARMS</string>
    <string name="clear_all_data">Clear all data</string>
    <string name="alarm_icon">Alarm icon</string>
    <string name="alarm">Alarm</string>
    <string name="time_to_sleep">Time to Sleep</string>
    <string name="stop_alarm">Stop Alarm</string>
    <string name="setup_permissions">Setup Permissions</string>
    <string name="allow_permissions_to_enable_alarms_and_notifications">Allow permissions to enable alarms and notifications</string>
    <string name="notifications">Notifications</string>
    <string name="checking">Checking...</string>
    <string name="allow_precise_alarm_scheduling">Allow precise alarm scheduling</string>
    <string name="alarm_settings">Alarm Settings</string>
    <string name="skip_for_now">Skip for now</string>
    <string name="continue">Continue</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="by_creating_an_account_you_agree_to_our_terms_and_conditions">By creating an account you agree to our Terms and Conditions</string>
    <string name="create_account">Create account</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in</string>
</resources>
