<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dailyflow_gradient"
    android:orientation="vertical"
    android:padding="24dp">

        <!-- Email -->
        <ImageView
            android:id="@+id/ivAppLogo"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:contentDescription="App Logo"
            android:src="@drawable/logo" />

        <!-- Username -->
        <EditText
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/user_name"
            android:padding="14dp"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary" />

        <!-- Phone -->

        <!-- Password -->
        <EditText
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary" />

        <!-- Confirm Password -->
        <EditText
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="14dp"
            android:textColor="@color/colorTextPrimary"
            android:textColorHint="@color/colorTextSecondary" />

        <!-- Button -->

        <TextView
            android:id="@+id/tvTermsAndConditions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="160dp"
            android:gravity="center"
            android:text="@string/by_creating_an_account_you_agree_to_our_terms_and_conditions"
            android:textColor="@color/colorTextSecondary"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:backgroundTint="@color/colorOnAccent"
            android:padding="14dp"
            android:text="@string/create_account"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary" />

        <!-- Terms -->

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="@color/colorTextSecondary"
            android:textColorLink="@color/colorTextSecondary"
            android:textSize="12sp" />
</LinearLayout>

