<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_dailyflow_gradient"
    android:orientation="vertical"
    android:padding="24dp">

    <!-- Email -->
    <ImageView
        android:id="@+id/ivAppLogo"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_gravity="center"
        android:layout_marginBottom="40dp"
        android:contentDescription="App Logo"
        android:src="@drawable/logo" />

    <!-- Username -->
    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/colorTextPrimary"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/edtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:hint="@string/enter_name"
        android:padding="14dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary" />

    <!-- Phone -->

    <!-- Password -->
    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="235dp"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:padding="14dp"
        android:textColor="@color/colorTextPrimary"
        android:textColorHint="@color/colorTextSecondary" />

    <!-- Confirm Password -->

    <!-- Button -->

    <!-- Terms -->

    <Button
        android:id="@+id/btnloginAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/colorOnAccent"
        android:padding="14dp"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/don_t_have_an_account_sign_up"
        android:textColor="@color/colorTextSecondary"
        android:textColorLink="@color/colorTextSecondary"
        android:textSize="12sp" />
</LinearLayout>

